--- a/src/app/pages/pro-training/pro-training.component.html
+++ b/src/app/pages/pro-training/pro-training.component.html
@@ -22,11 +22,11 @@
       </h2>
       <div class="mx-auto max-w-screen-lg">
         <p class="text-center text-base text-grayTitle md:text-xl">
-          ATC Pro Training, a division of ATC Group Middle East - Ashraf Abdel
-          Ghani Accountants and Tax Consultants, is dedicated to providing
-          top-tier professional training programs designed to enhance the skills
-          and knowledge of individuals and businesses in the fields of
-          accounting, taxation, and finance.
+          ATC Pro Training, a division of ATC Group - Ashraf Abdel Ghani
+          Accountants and Tax Consultants, is dedicated to providing top-tier
+          professional training programs designed to enhance the skills and
+          knowledge of individuals and businesses in the fields of accounting,
+          taxation, and finance.
         </p>
       </div>
     </div>
@@ -69,7 +69,7 @@
               International Certifications
             </h3>
 
-            <p class="text-xl text-grayTitle lg:pl-7">
+            <p class="text-2xl text-grayTitle lg:pl-7">
               Specialized courses in key areas:
             </p>
 
@@ -78,30 +78,30 @@
                 <li class="flex w-1/2 items-start gap-2">
                   <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
 
-                  <span class="text-lg text-grayTitle"> Accounting </span>
+                  <span class="text-xl text-grayTitle"> Accounting </span>
                 </li>
                 <li class="flex w-1/2 items-start gap-2">
                   <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
 
-                  <span class="text-lg text-grayTitle"> Taxation </span>
+                  <span class="text-xl text-grayTitle"> Taxation </span>
                 </li>
               </div>
               <div class="mb-3 flex">
                 <li class="flex w-1/2 items-start gap-2">
                   <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
 
-                  <span class="text-lg text-grayTitle"> Finance </span>
+                  <span class="text-xl text-grayTitle"> Finance </span>
                 </li>
                 <li class="flex w-1/2 items-start gap-2">
                   <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
 
-                  <span class="text-lg text-grayTitle"> Audit </span>
+                  <span class="text-xl text-grayTitle"> Audit </span>
                 </li>
               </div>
               <li class="flex items-start gap-2">
                 <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
 
-                <span class="text-lg text-grayTitle">
+                <span class="text-xl text-grayTitle">
                   Financial Management
                 </span>
               </li>
@@ -126,25 +126,26 @@
       </div>
     </div>
   </section>
-
   <section class="bg-[#F9F7F7] py-10">
     <div class="mx-auto max-w-screen-xl p-4">
       <h2
         class="my-0 mb-5 border-0 border-l-[12px] border-solid border-primary p-4 text-3xl font-bold md:text-4xl"
       >
-        Tailored and Specialized Training Solutions
+        Tailored and Specialized Training Courses
       </h2>
       <div class="mx-auto max-w-screen-lg text-center text-lg text-grayTitle">
-        <p class="mb-10">
+        <p class="mb-10 text-xl">
           we offer specialized courses for individuals and customized corporate
           training to meet your business's unique needs. Our programs cover a
           range of topics to enhance skills, boost productivity, and address
           team skill gaps. Contact us for a personalized consultation to design
           the ideal course for your team.
-          <br /><span class="font-bold"> Here are our current courses: </span>
+          <br /><span class="text-xl font-bold">
+            Here are our current courses:
+          </span>
         </p>
       </div>
-      <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
+      <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
         <div
           class="hvr-sweep-to-right border-0 border-l-2 border-solid border-black bg-white px-6 py-3 hover:border-primary"
         >
@@ -154,7 +155,7 @@
             </h3>
           </div>
           <div>
-            <p class="text-base md:text-xl">
+            <p class="text-base md:text-lg">
               PFA is designed to develop your knowledge of accounting standards
               and practices. PFA body of knowledge will effectively enhance your
               understanding of the underlying accounting concepts, principles
@@ -171,7 +172,7 @@
             </h3>
           </div>
           <div>
-            <p class="text-base md:text-xl">
+            <p class="text-base md:text-lg">
               Gain a globally recognized certification that equips you with the
               expertise needed to manage finance functions and strategic
               management.
@@ -187,7 +188,7 @@
             </h3>
           </div>
           <div>
-            <p class="text-base md:text-xl">
+            <p class="text-base md:text-lg">
               Enhance your knowledge of international financial reporting
               standards (IFRS) and improve your career prospects in the
               accounting and finance industry.
@@ -203,7 +204,7 @@
             </h3>
           </div>
           <div>
-            <p class="text-base md:text-xl">
+            <p class="text-base md:text-lg">
               Specialize in international taxation with a focus on key areas
               such as transfer pricing, VAT, and double tax treaties.
             </p>
@@ -218,7 +219,7 @@
             </h3>
           </div>
           <div>
-            <p class="text-base md:text-xl">
+            <p class="text-base md:text-lg">
               This prestigious certification is designed for professionals
               seeking to deepen their expertise and enhance their credentials.
               The FMAA Certificate covers key areas such as financial analysis,
@@ -236,7 +237,7 @@
             </h3>
           </div>
           <div>
-            <p class="text-base md:text-xl">
+            <p class="text-base md:text-lg">
               This program equips professionals with essential skills in
               Corporate Tax, income tax, VAT(value added tax), payroll, stamp,
               and real estate taxes, along with training on ETA submissions, tax
@@ -247,14 +248,60 @@
         <div
           class="hvr-sweep-to-right border-0 border-l-2 border-solid border-black bg-white px-6 py-3 hover:border-primary"
         >
-          <div class="flex items-center gap-4 md:min-h-28">
-            <h3 class="mt-0 flex-1 text-2xl font-bold text-primary md:text-3xl">
+          <div class="flex items-center gap-4">
+            <h3 class="mt-3 flex-1 text-2xl font-bold text-primary md:text-3xl">
               7. Cost:
             </h3>
           </div>
           <div>
-            <p class="text-base md:text-xl">
-              <!-- to be filled -->
+            <p class="text-base md:text-lg">
+              <!-- When you enroll in this course, you'll also be enrolled in this
+              Specialization. You will gain insights from industry experts,
+              learning to make your company's cost structure transparent and to
+              record and calculate costs effectively. The course covers methods
+              of product costing, teaching how companies determine the costs of
+              their products and services. Additionally, you will learn to
+              evaluate and select the product costing system best suited for
+              your company's production program and type. -->
+              Enroll in this course to gain expert insights into making your
+              company's cost structure transparent, calculating costs, and
+              mastering product costing methods. Learn to choose the best
+              costing system for your company's needs and streamline financial
+              decision-making.
+            </p>
+          </div>
+        </div>
+        <div
+          class="hvr-sweep-to-right border-0 border-l-2 border-solid border-black bg-white px-6 py-3 hover:border-primary"
+        >
+          <div class="flex items-center gap-4">
+            <h3 class="mt-3 flex-1 text-2xl font-bold text-primary md:text-3xl">
+              8. Egyptian Accounting Standards (EAS):
+            </h3>
+          </div>
+          <div>
+            <p class="text-base md:text-lg">
+              The Egyptian Accounting Standards (EAS) course offers essential
+              knowledge of Egypt's accounting framework, tailored for accounting
+              professionals, finance managers, auditors, and business owners to
+              ensure regulatory compliance and accurate financial reporting.
+            </p>
+          </div>
+        </div>
+        <div
+          class="hvr-sweep-to-right border-0 border-l-2 border-solid border-black bg-white px-6 py-3 hover:border-primary"
+        >
+          <div class="flex items-center gap-4">
+            <h3 class="mt-3 flex-1 text-2xl font-bold text-primary md:text-3xl">
+              9. E-invoice & E-receipt:
+            </h3>
+          </div>
+          <div>
+            <p class="text-base md:text-lg">
+              This course equips professionals with the skills to implement
+              Egypt's digital invoicing system, enabling compliance with
+              government regulations and enhancing business efficiency amidst
+              the shift to electronic processes.
             </p>
           </div>
         </div>
@@ -320,7 +367,7 @@
                   FMVA (Financial Modeling and Valuation Analyst)
                 </span>
               </li>
-              <li class="flex items-start gap-2">
+              <!-- <li class="flex items-start gap-2">
                 <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
 
                 <span class="text-lg text-grayTitle">
@@ -333,15 +380,15 @@
                 <span class="text-lg text-grayTitle">
                   CIPA (Certified Islamic Professional Accountant)
                 </span>
-              </li>
+              </li> -->
             </ul>
           </div>
 
           <div
             class="mb-4 mt-auto flex items-center justify-center lg:block lg:pl-7"
           >
+            <!-- href="https://atcprotraining.com/atc-pro-training-course-registration-form" -->
             <a
-              href="https://atcprotraining.com/atc-pro-training-course-registration-form"
               target="_blank"
               class="rounded-lg bg-black px-20 py-3 text-xl font-bold text-white no-underline hover:bg-primary"
               >Register Now</a
@@ -358,7 +405,7 @@
       </h2>
       <div class="grid grid-cols-1 gap-8 lg:grid-cols-3">
         <div class="p-4">
-          <div class="flex items-center gap-3">
+          <div class="flex min-h-16 items-center gap-3">
             <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">Expert Instructors</h3>
           </div>
@@ -368,7 +415,7 @@
           </p>
         </div>
         <div class="p-4">
-          <div class="flex items-center gap-3">
+          <div class="flex min-h-16 items-center gap-3">
             <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">Flexible Learning Options</h3>
           </div>
@@ -378,7 +425,7 @@
           </p>
         </div>
         <div class="p-4">
-          <div class="flex items-start gap-3">
+          <div class="flex min-h-16 items-center gap-3">
             <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">Comprehensive Curriculum</h3>
           </div>
@@ -393,7 +440,7 @@
         class="mx-auto grid max-w-screen-lg grid-cols-1 gap-8 lg:grid-cols-2"
       >
         <div class="p-4">
-          <div class="flex items-center gap-3">
+          <div class="flex min-h-16 items-center gap-3">
             <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">
               Certification and Recognition
@@ -406,7 +453,7 @@
           </p>
         </div>
         <div class="p-4">
-          <div class="flex items-center gap-3">
+          <div class="flex min-h-16 items-center gap-3">
             <i class="fa-regular fa-circle-check text-4xl text-white"></i>
             <h3 class="m-0 text-2xl font-bold">Latest education technology</h3>
           </div>
@@ -420,84 +467,6 @@
       </div>
     </div>
   </section>
-
-  <!-- <section class="py-10">
-    <div class="mx-auto max-w-screen-xl p-4">
-      <h2 class="text-center text-4xl text-primary">
-        Corporate Training Programs
-      </h2>
-      <div class="flex flex-col gap-10 md:flex-row md:gap-20">
-        <div class="md:w-1/2">
-          <h3
-            class="mt-5 border-0 border-l-[12px] border-solid border-primary p-4 text-3xl font-bold lg:mt-0"
-          >
-            Current Courses
-          </h3>
-
-          <ul class="list-none space-y-2 p-0 lg:pl-7">
-            <li class="flex items-start gap-2">
-              <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
-
-              <span class="text-lg text-grayTitle"> Cost Management </span>
-            </li>
-            <li class="flex items-start gap-2">
-              <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
-
-              <span class="text-lg text-grayTitle"> Financial Controls </span>
-            </li>
-            <li class="flex items-start gap-2">
-              <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
-
-              <span class="text-lg text-grayTitle"> Accounting </span>
-            </li>
-            <li class="flex items-start gap-2">
-              <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
-
-              <span class="text-lg text-grayTitle">
-                CTPro (Corporate Training Professional)
-              </span>
-            </li>
-            <li class="flex items-start gap-2">
-              <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
-
-              <span class="text-lg text-grayTitle">
-                EAS (Effective Accounting Systems)
-              </span>
-            </li>
-          </ul>
-        </div>
-        <div class="md:w-1/2">
-          <h3
-            class="mt-5 border-0 border-l-[12px] border-solid border-primary p-4 text-3xl font-bold lg:mt-0"
-          >
-            Future Courses
-          </h3>
-
-          <ul class="list-none space-y-2 p-0 lg:pl-7">
-            <li class="flex items-start gap-2">
-              <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
-
-              <span class="text-lg text-grayTitle"
-                >Planning and Budgeting
-              </span>
-            </li>
-
-            <li class="flex items-start gap-2">
-              <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
-
-              <span class="text-lg text-grayTitle"> Risk Management </span>
-            </li>
-            <li class="flex items-start gap-2">
-              <i class="pi pi-circle-on mt-2 text-xs text-primary"></i>
-
-              <span class="text-lg text-grayTitle"> Audit Techniques </span>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <section class="bg-[#F9F7F7] py-10">
     <div class="mx-auto max-w-screen-xl p-4">
       <div
@@ -512,8 +481,10 @@
             </h3>
 
             <p class="text-lg text-grayTitle lg:pl-7">
-              Available both online and offline to suit your learning
-              preferences.
+              Available both
+              <span class="font-bold text-black">online</span> and
+              <span class="font-bold text-black">offline</span> to suit your
+              learning preferences.
             </p>
             <div class="block h-[35vh] lg:hidden">
               <div
@@ -629,8 +600,8 @@
           or call us at (15673) for more information.
         </p>
         <div class="lg:pl-7">
+          <!-- href="https://atcprotraining.com/" -->
           <a
-            href="https://atcprotraining.com/"
             target="_blank"
             class="rounded-lg bg-black px-20 py-3 text-xl font-bold text-white no-underline hover:bg-primary"
             >Enroll Now</a
