--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,11 +1,11 @@
 <section class="bg-[#F9F7F7]">
-  <div class="mx-auto flex max-w-screen-2xl flex-col p-5 md:flex-row">
+  <div class="mx-auto flex max-w-screen-2xl flex-col p-4 md:flex-row">
     <div class="w-full md:w-1/3">
-      <h2
+      <p
         class="border-0 border-l-[12px] border-solid border-primary p-4 text-4xl font-bold"
       >
         Subscribe to our News-Letter Now!
-      </h2>
+      </p>
       <p class="pl-7 text-2xl text-grayTitle">
         Stay updated with the latest news and events in taxes and financial
         issues.
@@ -21,9 +21,9 @@
             class="block h-[50px] w-full rounded-md bg-white p-3 text-2xl placeholder:text-center focus:border-none focus:outline-none"
             autocomplete="email"
             required
+            email
             ngModel
             #email="ngModel"
-            [style]="{}"
             [ngClass]="{
               'ng-dirty': email.touched,
               'ng-invalid': email.invalid && email.touched,
@@ -38,9 +38,17 @@
           [style]="{
             width: '100%',
             backgroundColor: '#EB1F2F',
+            outline: 'none',
+            boxShadow: 'none',
+            border: 'none',
           }"
           type="submit"
         />
+        @if (message) {
+          <div class="mt-4 text-center text-lg font-bold">
+            {{ message }}
+          </div>
+        }
       </form>
     </div>
   </div>
@@ -52,9 +60,11 @@
     >
       <div class="flex max-w-[200px] flex-col gap-10">
         <img
-          src="atc_group_white2.jpg"
+          ngSrc="atc_group_white2.jpg"
           alt="ATC Group"
           class="h-[150px] w-[200px] object-cover"
+          width="200"
+          height="150"
         />
         <div>
           <ul class="m-0 flex list-none justify-between gap-3 p-0">
@@ -100,16 +110,16 @@
         </div>
       </div>
       <div>
-        <h5
+        <span
           class="mb-2 mt-0 border-0 border-l-[6px] border-solid border-primary px-5 py-2 text-xl text-white"
         >
           Quick Links
-        </h5>
+        </span>
         <div class="text-white">
           <ul class="flex list-none flex-row gap-14 pl-0">
             <div class="space-y-4">
               <li
-                class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
+                class="flex items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
                 <a class="text-white no-underline hover:text-primary">
@@ -117,7 +127,7 @@
                 </a>
               </li>
               <li
-                class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
+                class="flex items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
                 <a class="text-white no-underline hover:text-primary">
@@ -125,7 +135,7 @@
                 </a>
               </li>
               <li
-                class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
+                class="flex items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
                 <a class="text-white no-underline hover:text-primary">
@@ -133,7 +143,7 @@
                 </a>
               </li>
               <li
-                class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
+                class="flex items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
                 <a class="text-white no-underline hover:text-primary">
@@ -143,15 +153,18 @@
             </div>
             <div class="space-y-4">
               <li
-                class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
+                class="flex items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
-                <a class="text-white no-underline hover:text-primary">
+                <a
+                  routerLink="/pro-training"
+                  class="text-white no-underline hover:text-primary"
+                >
                   Pro-Training
                 </a>
               </li>
               <li
-                class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
+                class="flex items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
                 <a class="text-white no-underline hover:text-primary">
@@ -159,11 +172,19 @@
                 </a>
               </li>
               <li
-                class="flex cursor-pointer items-center gap-3 text-lg transition-colors hover:text-primary"
+                class="flex items-center gap-3 text-lg transition-colors hover:text-primary"
               >
                 <i class="fa-solid fa-circle text-xs text-primary"></i>
                 <a class="text-white no-underline hover:text-primary">
                   Locations
+                </a>
+              </li>
+              <li
+                class="flex items-center gap-3 text-lg transition-colors hover:text-primary"
+              >
+                <i class="fa-solid fa-circle text-xs text-primary"></i>
+                <a class="text-white no-underline hover:text-primary">
+                  Our Team
                 </a>
               </li>
             </div>
@@ -172,11 +193,11 @@
       </div>
 
       <div>
-        <h5
+        <span
           class="mb-2 mt-0 border-0 border-l-[6px] border-solid border-primary px-5 py-2 text-xl text-white"
         >
           Head Office
-        </h5>
+        </span>
         <div class="my-4 flex flex-col space-y-4 text-white">
           <span class="flex items-center gap-3">
             <i class="fa-solid fa-map-location-dot text-primary"></i>
@@ -193,20 +214,20 @@
           <span class="flex items-center gap-3">
             <i class="fa-solid fa-envelope text-primary"></i>
             <a
-              href="mailto:info@atc.com.eg"
-              class="cursor-pointer text-lg text-white no-underline hover:text-primary"
+              href="mailto:contactus@atc.com.eg"
+              class="text-lg text-white underline hover:text-primary"
             >
-              info&#64;atc.com.eg
+              contactus&#64;atc.com.eg
             </a>
           </span>
         </div>
       </div>
       <div>
-        <h5
+        <span
           class="mb-2 mt-0 border-0 border-l-[6px] border-solid border-primary px-5 py-2 text-xl text-white"
         >
           Other Websites
-        </h5>
+        </span>
 
         <div class="my-4 flex flex-col space-y-4 text-white">
           <span class="flex items-center gap-3">
@@ -255,6 +276,6 @@
     </div>
   </div>
   <div class="bg-primary p-2 text-center font-bold text-white">
-    This website was developed by ©ATC GROUP
+    <span> This website was developed by ©ATC GROUP </span>
   </div>
 </footer>
